k8s-deployments/user-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  namespace: mern-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user-container
          image: 466825169909.dkr.ecr.ap-south-1.amazonaws.com/user-service:a4edca7690a5e0e3cd22c670f266801e5703a15d
          ports:
            - containerPort: 5002
