k8s-deployments/user-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: mern-dev
spec:
  selector:
    app: user
  ports:
    - port: 5002
      targetPort: 5002
  type: ClusterIP
